--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ profile = "black"
 [tool.ruff]
 line-length = 100
 target-version = "py311"
+
+[tool.ruff.lint]
 select = ["E","F","I","UP"]
 ignore = ["E501"]
 
